# SmartDocs-Multillingual-Agentic-Rag-Project

./: .dockerignore  .gitignore  .smartdocs_session.json  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  fix_db.py  langgraph.json  main.py  nuke_db.py  pyproject.toml  railway.toml  smartdocs_graph.mmd  smoke_test.py  validate_embeddings.py
agents/: smartdocs_graph.py
api/: main.py
api/middleware/: user_context.py
api/routes/: health.py  ingest.py  query.py
config/: cost_config.yaml  retrieval_config.yaml  settings.py
embeddings/: dense_embedder.py  embedding_validator.py  sparse_embedder.py
evaluation/: custom_metrics.py  deepeval_tests.py  deployment_gate.py  evaluation_report.json  gate_result.json  golden_test_set.json  ragas_evaluator.py
generation/: context_assembler.py  sarvam_client.py  self_critique.py
guardrails/: output_guardrail.py
hf_configs/: README_api.md  README_ui.md
ingestion/: chunker.py  document_classifier.py  indic_preprocessing.py  ingestion_worker.py  injection_scanner.py  metadata_builder.py  pdf_loader.py  pii_detector.py
observability/: cost_tracker.py  langsmith_tracer.py
reranking/: reranker.py
retrieval/: cache.py  crag_fallback.py  hybrid_retriever.py  language_detector.py  query_classifier.py  query_transformer.py
smartdocs/vectorstore/: pgvector_client.py
tests/: test_5a_ingestion_pipeline.py  test_evaluation.py  test_generation.py  test_ingestion_smoke.py  test_retrieval.py
ui/: app.py  session_store.py
ui/components/: answer_panel.py  cost_panel.py  (+2 more)
vectorstore/: pgvector_client.py  schema.sql
